row gutter https://www.youtube.com/watch?v=PwEvMY7nnY8

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="container">
          <h1 class="text-center col-xl-12"><strong>Electrical Enginner's Resources</strong></h1>
          <br>
-         <div class="row">
-            <div class="col-xl-4" id="EM">
+         <div class="row g-3">
+            <div class="col-12 col-md-6 col-lg-4" id="EM">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/machines.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -40,7 +40,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/psa.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -50,7 +50,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/mi.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -60,7 +60,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/td.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -70,7 +70,7 @@
                   </div>
                </div>
             </div>
-            <div  class="col-xl-4" id="CS" >
+            <div  class="col-12 col-md-6 col-lg-4" id="CS" >
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/cs.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -80,7 +80,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/dsp.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -90,7 +90,7 @@
                   </div>
                </div>
             </div>
-            <div id="PE" class="col-xl-4">
+            <div id="PE" class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/pe.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -100,7 +100,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/lic.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -110,7 +110,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-12 col-md-6 col-lg-4">
                <div class="card mb-4 rounded-3 shadow-smcard mb-4 rounded-3 shadow-sm">
                   <img class="card-img-top" src="images/dlc.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -122,7 +122,7 @@
             </div>
          </div>
       </div>
-      <nav class="navbar navbar-expand-lg text-light bg-dark"> This website is dedicated to students who care to think beyond exams and marks.Join our Discord server for more resources &nbsp;<a href="https://discord.gg/SG2kZzgWs3"> Discord invite</a>
+      <nav class="navbar navbar-expand-lg text-light bg-dark"> This website is dedicated to students who care to think beyond exams and marks.
        </nav>
       <!--      Adhithya code ends--> 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
