Blog landing dummy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Subjects</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#EM">Power system</a> <a class="dropdown-item" href="#PE">Semiconductors</a> <a class="dropdown-item" href="#CS">Control and Signal processing</a> </div>
                </li>
-               <li class="nav-item"> <a class="nav-link" href="https://200901002.github.io/AboutMe/">About me</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="blogLanding.html">Me explaining stuff</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="https://200901002.github.io/AboutMe/">About me</a> </li>
             </ul>
          </div>
       </nav>
