--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="mainindexbody">
         <!-- body code goes here -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,7 +35,7 @@
         <!--      Adhithya Code starts-->
         <div class="container">
             <h1 class="text-center col-xl-12">
-                <strong>Electrical Enginner's Resources</strong>
+                <strong>Resources for EE's</strong>
             </h1>
             <br>
             <div class="row g-3">
@@ -139,8 +139,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <nav class="navbar navbar-expand-lg text-light bg-dark"> This website is dedicated to students who care to think beyond exams and marks. </nav>
+        <nav class="navbar navbar-expand-lg text-light"> This website is dedicated to students who care to think beyond exams and marks. </nav>
+            </div>
+
         <!--      Adhithya code ends-->
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/popper.min.js"></script>
